force-app/main/default/objects/SLA_Violation__c/SLA_Violation__c.object-meta.xml
<CustomObject>
    <label>SLA Violation</label>
    <nameField>
        <displayFormat>SLA-{000000}</displayFormat>
        <label>SLA Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>