force-app/main/default/objects/SLA_Violation__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Number of days the SLA Violation has been open. Stops increasing once the SLA Violation is closed.</description>
    <formula>IF(ISNULL(Closed_Date__c),
  CEILING(NOW() - CreatedDate),
  CEILING(Closed_Date__c  - CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>