force-app/main/default/objects/SLA_Violation__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Investigation Assignee at the time the SLA Violation was logged</description>
    <inlineHelpText>Investigation Assignee, or Support Contact, at the time the SLA violation occurred</inlineHelpText>
    <label>SLA Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SLA_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>