force-app/main/default/objects/SLA_Violation__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <formula>ISPICKVAL(Status__c,&quot;Closed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>