force-app/main/default/objects/SLA_Violation__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Date and Time when the SLA Violation was corrected/closed</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>