force-app/main/default/objects/SLA_Violation__c/fields/Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Level__c</fullName>
    <label>Severity Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>