force-app/main/default/objects/SLA_Violation__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Team assigned to the investigation when SLA was violated</description>
    <label>Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>SLA Violations</relationshipLabel>
    <relationshipName>SLA_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>