force-app/main/default/objects/SLA_Violation__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <label>Work</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ADM_Work__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Investigation</value>
        </filterItems>
        <infoMessage>Related Work record must be an Investigation</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>SLA Violations</relationshipLabel>
    <relationshipName>SLA_Violations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>